@@ -11,7 +11,8 @@ FROM eclipse-temurin:21-jre
 WORKDIR /app
 COPY --from=builder /app/build/libs/*.jar app.jar
 ENTRYPOINT ["java", \
-  "-Xms256m", "-Xmx512m", \
-  "-XX:+UseZGC", "-XX:+ZGenerational", \
+  "-Xms128m", "-Xmx350m", \
+  "-XX:+UseG1GC", \
+  "-XX:MaxMetaspaceSize=128m", \
   "-Dfile.encoding=UTF-8", \
   "-jar", "app.jar"]
